hphp/hack/test/extended_reasons/generic_subtyping_rcvr_upper_bound.php.diff.exp
--- control

+++ test

@@ -1,16 +1,14 @@

-error: Typing[4323] Invalid argument [1]
--> T is a constrained type parameter [2]
--> This type constraint is violated [3]
--> Expected B [3]
--> But got A [4]
+error: Typing[4110] Invalid argument [1]
+-> Expected B [2]
+-> But got A [3]
 
 hphp/hack/test/extended_reasons/generic_subtyping_rcvr_upper_bound.php:10:20
-       5 | class B extends A {}
-       6 | 
-[2,3]  7 | function rcvr_upper_bound<T as B>(T $x): void {}
-       8 | 
-[4]    9 | function call_upper_bound_with_conrete(A $x): void {
-[1]   10 |   rcvr_upper_bound($x);
-      11 | }
+     5 | class B extends A {}
+     6 | 
+[2]  7 | function rcvr_upper_bound<T as B>(T $x): void {}
+     8 | 
+[3]  9 | function call_upper_bound_with_conrete(A $x): void {
+[1] 10 |   rcvr_upper_bound($x);
+    11 | }
 
 1 error found